# CPDBv2_backend

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  Sectigo_CA.pem.secret  Vagrantfile  ansible.cfg  apiary.apib  azure.tf  backend.tf.secret  beta.env.secret  circle.yml  cpdp.tf  cpdpbot.tf  docker-compose.yml  env.sample  extra_certs.pem.secret  gunicorn.conf  ingress.yml  kubernetes.tf  local.env.secret  new-controller.yaml  outputs.tf  pg-credentials.json.secret  postgres.tf  problematic-lib-versions.txt  prod.env.secret  pyproject.toml  secrets.auto.tfvars.secret  setup-new-environment.md  setup.cfg  staging-pg-credentials.json.secret  staging.env  staging.env.secret  test_output.txt  (+3 more)
.circleci/: config.yml  extra_certs.pem.secret
.circleci/docker/: Dockerfile
.circleci/postgis-docker/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
ansible/: notebook.yml  production.yml  staging.yml  vagrant.yml
ansible/env_vars/: base.yml  production.yml  secrets.yml  staging-secrets.yml  staging.yml  vagrant.yml
ansible/inventory/: development  notebook  production  staging  vagrant
apiary/: activity_grid.md  analytic_events.md  apiary.md  app_config.md  attachment.md  city_summary.md  cms_page.md  complaint_mobile.md  complaint_mobile_request_documents.md  complaint_new_documents.md  complaint_request_documents.md  complaint_summaries.md  cr.md  forgot_password.md  general_search.md  lawsuit.md  officer_coaccusals.md  officer_create_zip_file.md  officer_mobile.md  officer_new_timeline_items.md  officer_request_download.md  officer_summary.md  officer_timeline_items.md  officer_timeline_mini_map.md  pinboard-complainants-summary.md  pinboard-complaint-summary.md  pinboard-officers-summary.md  pinboard-trr-summary.md  pinboard.md  pinboard_complaints.md  pinboard_latest_retrieved.md  pinboard_mobile_complaints.md  pinboard_mobile_officers.md  pinboard_mobile_relevant.md  pinboard_mobile_trrs.md  pinboard_officers.md  pinboard_relevant.md  pinboard_trrs.md  popup.md  related_complaints.md  (+13 more)
cpdb/: manage.py
cpdb/activity_grid/: factories.py  models.py  serializers.py  views.py
cpdb/activity_log/: admin.py  constants.py  factories.py  models.py
cpdb/alias/: constants.py  serializers.py  utils.py  views.py
cpdb/analytics/: constants.py  factories.py  filters.py  ga_utils.py  models.py  search_hooks.py  serializers.py  services.py  views.py
cpdb/app_config/: constants.py  factories.py  views.py
cpdb/authentication/: factories.py  utils.py  views.py
cpdb/benchmark/: cr_benchmark.py  officers_benchmark.py  utils.py
cpdb/cms/: cms_fields.py  cms_page_descriptors.py  factories.py  fields.py  models.py  permissions.py  randomizers.py  serializers.py  utils.py  views.py
cpdb/config/: cache.py  loaders.py  logging_filters.py  storages.py  urls.py  views.py  wsgi.py
cpdb/cr/: doc_types.py  index_aliases.py  indexers.py  indices.py  queries.py  serializers.py  views.py
cpdb/cr_v3/: views.py
cpdb/data/: admin.py  constants.py  factories.py  migration_utils.py  models.py  officer_percentile.py  validators.py
cpdb/data_pipeline/: admin.py  factories.py  models.py
cpdb/data_versioning/: changekeepers.py  models.py  utils.py
data-updates/: CPDP_Schema_Documentation_-_II.md  data_area_export.csv
docs/: api-healthcheck.md  api-standards.md  aws-lambda.md  backup-elasticsearch-snapshot.md  kubernetes.md  setup-ssl-certificates.md  snapshot-test.md  twitter_bot.md  visual-tokens.md
kubernetes/: bash.yml  cpdpbot.yml  cronjob.yml  elasticsearch.yml  gunicorn.yml  ingress.yml  job.yml  namespaces.yml  pg_proxy.yml  postgres.yml  redirect-ingress.yml  redis.yml  secrets-beta.yml.secret  secrets-production.yml.secret  secrets-staging.yml.secret  secrets.yml.secret
lambda/: README.md  deploy.sh  test.py
requirements/: base.txt  local.txt  test.txt
terraform/: azure.tf  backend.tf.secret
(+1652 files in other folders)
