[tool.poetry]
name = "cpdbv2-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{include = "cpdb"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "~=2.2"
django-environ = "~=0.4.0"
django-filter = "~=2.0.0"
djangorestframework = "~=3.11.0"
psycopg2-binary = "*"
django-cors-headers = "~=2.4.0"
iso8601 = "~=0.1.11"
tqdm = "~=4.17.1"
requests = "^2.28.2"
elasticsearch-dsl = "~=5.1.0"
azure = "~=4.0.0"
azure-mgmt-storage = "~=2.0.0"
azure-storage-blob = "~=1.4.0"
azure-storage-queue = "~=1.4.0"
django-taggit = "~=1.2.0"
django-nose = "~=1.4.4"
beautifulsoup4 = "~=4.6.0"
selenium = "~=3.11.0"
django-admin-sortable = "~=2.1.9"
sh = "~=1.12.14"
faker = "~=4.0.2"
python-dateutil = "~=2.6.1"
dateparser = "~=0.7.0"
tweepy = "~=3.8.0"
zipcodes = "~=1.0.4"
sortedcontainers = "~=2.0.5"
airtable-python-wrapper = "~=0.11.3"
django-bulk-update = "~=2.2.0"
gunicorn = "~=19.9.0"
django-redis = "~=4.9.1"
redis = "~=2.10.6"
tls-syslog = "~=0.1.3"
markdown2 = "~=2.3.7"
django-email-bandit = "~=1.5"
openpyxl = "~=2.5.12"
oauth2client = "~=4.1.3"
django-sortedm2m = "~=3.0.0"
django-ipware = "~=2.1.0"
zipstream = "^1.1.4"
smart-open = "1.7.1"
python-documentcloud = ">=1.1.1,<1.2.0"
google-cloud-language = ">=0.31.0,<0.32.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
ipdb = "*"
coverage = "~=5.0.4"
coveralls = "~=2.0.0"
factory-boy = "~=2.11.1"
freezegun = "~=0.3.13"
mock = "~=2.0.0"
robber = "~=1.1.5"
xlsx2csv = "~=0.7.4"
responses = "^0.22.0"
moto = {extras = ["lambda", "s3"], version = "^4.1.0"}
botocore = "^1.29.51"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
