[tool.poetry]
name = "cpdbv2-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "cpdb"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "~=2.2"
django-environ = "~=0.4.0"
django-filter = "~=2.0.0"
djangorestframework = "~=3.11.0"
psycopg2-binary = "*"
django-cors-headers = "~=2.4.0"
iso8601 = "~=0.1.11"
tqdm = "~=4.17.1"
requests = "^2.28.2"
elasticsearch-dsl = "~=5.1.0"
azure = "~=4.0.0"
azure-mgmt-storage = "~=2.0.0"
azure-storage-blob = "~=1.4.0"
azure-storage-queue = ">=1.4.0,<1.5.0"
django-taggit = "~=1.2.0"
django-nose = "~=1.4.4"
beautifulsoup4 = "~=4.6.0"
selenium = "~=3.11.0"
django-admin-sortable = "~=2.1.9"
sh = "~=1.12.14"
faker = "~=4.0.2"
python-dateutil = "~=2.6.1"
dateparser = "~=0.7.0"
tweepy = ">=3.6.0,<3.7.0"
zipcodes = "~=1.0.4"
sortedcontainers = "~=2.0.5"
airtable-python-wrapper = "~=0.11.3"
django-bulk-update = ">=2.2.0,<2.3.0"
gunicorn = "~=19.9.0"
django-redis = "~=4.9.1"
redis = "~=2.10.6"
tls-syslog = ">=0.1.3,<0.2.0"
markdown2 = "~=2.3.7"
django-email-bandit = "~=1.5"
openpyxl = "~=2.5.12"
oauth2client = "~=4.1.3"
django-sortedm2m = "~=3.0.0"
django-ipware = "~=2.1.0"
zipstream = "^1.1.4"
smart-open = "1.7.1"
python-documentcloud = ">=1.1.1,<1.2.0"
google-cloud-language = ">=0.31.0,<0.32.0"
botocore = ">=1.13,<2.0"
awscli = ">=1.16.306,<1.17.0"
boto3 = ">=1.10.42,<1.11.0"
django-anymail = ">=4.2,<5.0"
django-debug-toolbar = ">=1.9.1,<1.10.0"
django-extensions = ">=1.9.0,<1.10.0"
django-taggit-serializer = ">=0.1.7,<0.2.0"
google-api-python-client = ">=1.7.8,<1.8.0"
pytz = ">=2016.6.1,<2016.7.0"
twisted = {version = ">=20.3.0,<20.4.0", extras = ["tls"]}
gizeh = ">=0.1.10,<0.2.0"
moviepy = ">=1.0.0,<1.1.0"
imageio-ffmpeg = ">=0.2.0,<0.3.0"
imageio = ">=2.5.0,<2.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=3.7.9,<3.8.0"
coverage = ">=5.0.4,<5.1.0"
coveralls = ">=2.0.0,<2.1.0"
factory-boy = ">=2.11.1,<2.12.0"
freezegun = ">=0.3.13,<0.4.0"
mock = ">=2.0.0,<2.1.0"
robber = ">=1.1.5,<1.2.0"
xlsx2csv = ">=0.7.4,<0.8.0"
moto = {version = ">=4.1.0,<4.2.0", extras = ["lambda", "s3"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
